# ibm_watson_workshop

./: README.md  main.py  pyproject.toml  tests.py
translator/: __init__.py  tests.py  translator.py
